--- a/emission.ui
+++ b/emission.ui
@@ -2529,6 +2529,12 @@ QTableWidget::item:selected {
      <property name="selectionBehavior">
       <enum>QAbstractItemView::SelectRows</enum>
      </property>
+     <property name="verticalScrollMode">
+      <enum>QAbstractItemView::ScrollPerPixel</enum>
+     </property>
+     <property name="horizontalScrollMode">
+      <enum>QAbstractItemView::ScrollPerPixel</enum>
+     </property>
      <property name="showGrid">
       <bool>false</bool>
      </property>
