--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -577,26 +577,10 @@
        <item>
         <widget class="QStackedWidget" name="stackedWidget">
          <property name="currentIndex">
-          <number>0</number>
+          <number>1</number>
          </property>
-         <widget class="QWidget" name="page">
-          <layout class="QGridLayout" name="gridLayout_2">
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_4">
-             <property name="font">
-              <font>
-               <pointsize>20</pointsize>
-              </font>
-             </property>
-             <property name="text">
-              <string>Home Page</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignCenter</set>
-             </property>
-            </widget>
-           </item>
-          </layout>
+         <widget class="MainMenu" name="page">
+          <layout class="QGridLayout" name="_2"/>
          </widget>
          <widget class="Emission" name="page_2">
           <layout class="QGridLayout" name="gridLayout_3"/>
@@ -684,6 +668,12 @@
    <class>Equipment</class>
    <extends>QWidget</extends>
    <header>equipment.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>MainMenu</class>
+   <extends>QWidget</extends>
+   <header>mainmenu.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
