--- a/contract.ui
+++ b/contract.ui
@@ -413,8 +413,8 @@ QTextEdit:hover {
      <string/>
     </property>
     <property name="icon">
-     <iconset>
-      <normaloff>../../../Downloads/plus (1).png</normaloff>../../../Downloads/plus (1).png</iconset>
+     <iconset resource="resource.qrc">
+      <normaloff>:/icon/icon/plus (1).png</normaloff>:/icon/icon/plus (1).png</iconset>
     </property>
     <property name="iconSize">
      <size>
@@ -631,7 +631,9 @@ QComboBox::item:selected {
    <zorder>sign</zorder>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>pushButton_3</sender>
