--- a/equipment.ui
+++ b/equipment.ui
@@ -806,8 +806,8 @@ QTextEdit:hover {
       <string/>
      </property>
      <property name="icon">
-      <iconset>
-       <normaloff>../../../Downloads/plus (1).png</normaloff>../../../Downloads/plus (1).png</iconset>
+      <iconset resource="resource.qrc">
+       <normaloff>:/icon/icon/plus (1).png</normaloff>:/icon/icon/plus (1).png</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -1874,6 +1874,27 @@ QTableWidget::item:selected {
      </rect>
     </property>
    </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>60</y>
+      <width>671</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Roboto Black</family>
+      <pointsize>36</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>LISTE DES EQUIPEMENT</string>
+    </property>
+   </widget>
    <zorder>widget_3</zorder>
    <zorder>Label</zorder>
    <zorder>Labelequipment</zorder>
@@ -1885,9 +1906,12 @@ QTableWidget::item:selected {
    <zorder>widget_4</zorder>
    <zorder>result_widget</zorder>
    <zorder>webWidget</zorder>
+   <zorder>label_8</zorder>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>pushButton_3</sender>
